# MiniJS

./: .clang-format  .gitignore  Blog-Recursive-Descent-Parser.md  CMakeLists.txt  MiniJSVM-Detailed-Plan.md  MiniJSVM-Roadmap.md  QuickJS-Architecture-Guide.md  README.md
docs/: bytecode_closure.md  gc.md  language.md  runtime.md
examples/: basics.js  closure_counter.js  control_flow.js  demo.js  objects_arrays.js
include/minijs/: ast.h  bytecode_closure.h  bytecode_function.h  chunk.h  compiler.h  diagnostic.h  disassembler.h  environment.h  gc_object.h  interpreter.h  lexer.h  object.h  parser.h  runtime_error.h  source_location.h  token.h  value.h  vm.h
src/: ast.cpp  chunk.cpp  compiler.cpp  disassembler.cpp  environment.cpp  gc_object.cpp  interpreter.cpp  lexer.cpp  main.cpp  object.cpp  parser.cpp  token.cpp  value.cpp  vm.cpp
tests/: test_bytecode.cpp  test_framework.h  test_interpreter.cpp  test_lexer.cpp  test_main.cpp  test_parser.cpp
